--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
+ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
@@ -8,7 +10,7 @@ body {
 /* Style the header */
 header {
     background-color: whitesmoke;
-    color:gray;
+    color: gray;
     text-align: center;
     padding: 20px 0;
 }
@@ -84,7 +86,7 @@ header {
     transition: background-position 0.5s, padding-right 0.5s;
     padding-right: 80px;
 
-    
+
 }
 
 #result {
@@ -102,17 +104,17 @@ header {
 
 /* Style the navbar */
 .navbar {
-    background-color:rgb(218, 218, 218);
+    background-color: rgb(218, 218, 218);
     width: 20%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 10px;
-    /* make navbar stick to the center */
     margin-left: auto;
     margin-right: auto;
     border-radius: 5px;
-    
+    /* apply some shadow to the div */
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 /* Style the navigation list */
@@ -143,3 +145,21 @@ header {
     color: black;
 }
 
+.landing-text {
+    font-size: 250px;
+    text-align: center;
+    margin-top: 100px;
+    /* font-family: 'Prompt', sans-serif; */
+    /* font-family: 'Young Serif', serif; */
+    font-family: 'Righteous', cursive;
+}
+
+.landing-text-2 {
+    /* position: absolute;
+    top: 35%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; */
+    letter-spacing: 10px;
+    font-family: 'Kalam', cursive;
+}
