--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ header {
     margin-top: 100px;
     /* font-family: 'Prompt', sans-serif; */
     /* font-family: 'Young Serif', serif; */
-    font-family: "Helvetica", cursive;
+    font-family: 'Righteous', cursive;
 }
 
 .landing-text-2 {
@@ -182,8 +182,8 @@ header {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center; */
-    letter-spacing: 4px;
-    font-family: "Calibre", cursive;
+    letter-spacing: 10px;
+    font-family: 'Kalam', cursive;
 }
 
 /* Style the temperature icon with color */
@@ -293,15 +293,21 @@ footer {
 /* Styles for the preloader */
 .preloader {
     position: fixed;
-    top: 0;
     left: 0;
+    top: 0;
     width: 100%;
     height: 100%;
-    background-color: #fff; /* Background color of the preloader */
+    z-index: 9999;
+    background-color: #fff;
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 9999; /* Ensure it's on top of everything */
+}
+
+
+dotlottie-player {
+    width: 100%;
+    height: 100%;
 }
 
 /* Styles for the spinner (adjust as needed) */
