--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header {
 
 /* Style the container */
 .container {
-    max-width: 600px;
+    width: 600px;
     border-style: solid;
     border-color: black;
     margin: 0 auto;
@@ -29,7 +29,14 @@ header {
     margin-top: 10px;
     box-sizing: border-box;
 }
-
+@media (max-width: 1000px) {
+    .container{
+        width: 100%;
+    }
+    .navbar{
+        width: 100%;
+    }
+  }
 .loc-details {
     /* make some space between the placeholder and button*/
     margin-bottom: 30px;
@@ -140,7 +147,12 @@ header {
     margin-right: auto;
     border-radius: 5px;
 }
-
+@media (max-width: 1000px) {
+    .navbar{
+        width: 80%;
+        font-size: 3em;
+    }
+  }
 /* Style the navigation list */
 .nav-list {
     list-style-type: none;
@@ -177,7 +189,11 @@ header {
     /* font-family: 'Young Serif', serif; */
     font-family: 'Righteous', cursive;
 }
-
+@media (max-width: 1450px) {
+    .landing-text {
+      font-size: 10em;
+    }
+  }
 .landing-text-2 {
     /* position: absolute;
     top: 35%;
@@ -248,9 +264,7 @@ footer {
     bottom: 0;
     width: 100%;
     position: sticky;
-
 }
-
 .light-text {
     color: #a5a5a5;
 }
@@ -379,4 +393,11 @@ dotlottie-player {
 
 .card-footer a:hover {
     background-color: #1f639e;
+}
+.content{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    overflow-x: hidden;
 }
