--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ header {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     margin-top: 10px;
+    margin-bottom: 2rem;
 }
 
 .loc-details {
@@ -168,7 +169,7 @@ header {
 }
 
 .landing-text {
-    font-size: 250px;
+    font-size: 12rem;
     text-align: center;
     margin-top: 100px;
     /* font-family: 'Prompt', sans-serif; */
@@ -244,7 +245,6 @@ footer {
     position: fixed;
     left: 0;
     bottom: 0;
-    width: 100%;
     position: sticky;
 
 }
@@ -287,7 +287,7 @@ footer {
 /*Card CSS*/
 /* Styles for the card */
 .card {
-    width: 300px;
+    /* width: 300px; */
     margin: 20px;
     border-radius: 10px;
     overflow: hidden;
@@ -335,4 +335,52 @@ footer {
 
 .card-footer a:hover {
     background-color: #1f639e;
+}
+
+/* Mobile-First Responsive Design */
+/* Smaller screens, like smartphones */
+@media (max-width: 768px) {
+    /* Adjust the header and landing text */
+    header {
+        font-size: 20px;
+    }
+
+    .landing-text {
+        font-size: 3rem; /* Adjust to your preference */
+    }
+
+    .landing-text-2 {
+        font-size: 0.7rem; /* Adjust to your preference */
+    }
+
+    /* Modify the container width and padding */
+    .container {
+        margin-top: 2rem;
+        max-width: 85%;
+        padding: 10px;
+    }
+
+    /* Adjust the input and button sizes */
+    #input {
+        width: 60%;
+        font-size: 12px;
+    }
+
+    #button {
+        padding: 8px 16px;
+    }
+
+    /* Make the navbar full width and smaller text */
+    .navbar {
+        width: 100%;
+        font-size: 14px;
+    }
+
+    /* Modify the footer text size and padding */
+    footer {
+        position: relative;
+        margin-top: 18vh;
+        font-size: 12px;
+        padding: 2px;
+    }
 }
