--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ header {
     border-style: solid;
     border-color: black;
     margin: 0 auto;
+    margin-bottom: 2rem;
     padding: 30px;
     background-color: #fff;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -129,11 +130,13 @@ header {
 /* Style the navbar */
 .navbar {
     background-color: rgb(218, 218, 218);
-    width: 20%;
+    width: 35%;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 10px;
+    flex-direction: row;
+    justify-content: center;
     /* make navbar stick to the center */
     margin-left: auto;
     margin-right: auto;
@@ -183,7 +186,6 @@ header {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center; */
-    letter-spacing: 10px;
     font-family: 'Kalam', cursive;
 }
 
@@ -388,7 +390,7 @@ dotlottie-player {
     }
 
     .landing-text {
-        font-size: 3rem; /* Adjust to your preference */
+        font-size: 4rem; /* Adjust to your preference */
     }
 
     .landing-text-2 {
@@ -421,7 +423,7 @@ dotlottie-player {
     /* Modify the footer text size and padding */
     footer {
         position: relative;
-        margin-top: 18vh;
+        margin-top: 26vh;
         font-size: 12px;
         padding: 2px;
     }
