--- a/style.css
+++ b/style.css
@@ -6,8 +6,23 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
+    background:linear-gradient(-45deg, #76eede, #bf7ba5, #b0c152, #c19c85, #6145a9);/*gradient bg*/
+    background-size: 400% 400%;
+    width:100%;
+    height: 100vh;
+    animation: gradient 15s ease infinite;/*gradient animation*/
 }
-
+@keyframes gradient{/*controls animation appearance*/
+    0%{
+        background-position:0% 50%;
+    }
+    50%{
+        background-position:100% 50%;
+    }
+    100%{
+        background-position:0% 50%;
+    }
+}
 /* Style the header */
 header {
     background-color: whitesmoke;
