--- a/style.css
+++ b/style.css
@@ -5,12 +5,16 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #f5f5f5;
-    background:linear-gradient(-45deg, #76eede, #bf7ba5, #b0c152, #c19c85, #6145a9);/*gradient bg*/
+    background-color: #f5f5f5; 
+}
+/*gradient bg*/
+body,header{
+    background:linear-gradient(-45deg, #76eede, #bf7ba5, #b0c152, #c19c85, #6145a9);
     background-size: 400% 400%;
     width:100%;
     height: 100vh;
     animation: gradient 15s ease infinite;/*gradient animation*/
+    
 }
 @keyframes gradient{/*controls animation appearance*/
     0%{
