Changed the CSS

--- a/css/contri-style.css
+++ b/css/contri-style.css
@@ -67,7 +67,7 @@ body {
 /* Style the button */
 .button {
   padding: 10px 20px;
-  background-color: #333;
+  background-color: #ff0000;
   color: #fff;
   border: none;
   border-radius: 5px;
