--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,18 @@ body {
     padding: 0;
     font-family: Arial, sans-serif;
     background-color: #f5f5f5;
+    background-image: url(https://wallpapers.com/images/hd/weather-scenarios-collage-dbk9c5n23l7e5fgb.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: repeat;
+
+  
 }
 
 /* Style the header */
 header {
-    background-color: whitesmoke;
-    color: gray;
+    background-color: rgba(66, 67, 80, 0.428);
+    color: rgb(0, 229, 255);
     text-align: center;
     padding: 30px 0;
 }
@@ -24,7 +30,7 @@ header {
     margin: 0 auto;
     margin-bottom: 2rem;
     padding: 30px;
-    background-color: #fff;
+    background-color: #ffffffdf;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
     margin-top: 10px;
@@ -53,7 +59,7 @@ header {
 /* Style the input field */
 #input {
     padding: 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #23777f;
     border-radius: 5px;
     font-size: 16px;
     width: 70%;
@@ -62,8 +68,8 @@ header {
 
 /* Style the button */
 #button {
-    padding: 10px 20px;
-    background-color: #333;
+    padding: 15px;
+    background-color: #156820;
     color: #fff;
     border: none;
     border-radius: 5px;
@@ -71,6 +77,10 @@ header {
     font-size: 16px;
     border-radius: 5px;
     padding-left: 20px;
+}
+
+#button:hover {
+    background-color: #0d6efd;
 }
 
 .button {
@@ -136,7 +146,7 @@ header {
 
 /* Style the navbar */
 .navbar {
-    background-color: rgb(218, 218, 218);
+    background-color: rgb(64, 0, 255);
     width: 35%;
     display: flex;
     justify-content: center;
@@ -179,8 +189,9 @@ header {
 
 /* Change the link color on hover */
 .nav-item a:hover {
-    background-color: #ddd;
+    background-color: #2132ce;
     color: black;
+    text-decoration:underline;
 }
 
 .landing-text {
@@ -255,8 +266,8 @@ header {
 
 /* footer */
 footer {
-    background-color: rgb(235, 235, 235);
-    color: black;
+    background-color: rgb(0, 0, 0);
+    color: rgb(185, 182, 182);
     text-align: center;
     padding: 5px;
     margin-top: 2px;
@@ -451,7 +462,7 @@ dotlottie-player {
 }
 /* DROPDOWN MENU */
 .dropbtn {
-    background-color: rgb(51, 51, 51);
+    background-color: rgb(0, 81, 255);
     border-radius: 5px;
     color: white;
     padding: 10px;
@@ -471,7 +482,7 @@ dotlottie-player {
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: #110505;
     min-width: 100px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
@@ -479,7 +490,7 @@ dotlottie-player {
   
   /* Links inside the dropdown */
   .dropdown-content a {
-    color: black;
+    color: rgb(246, 231, 231);
     padding: 12px 16px;
     text-decoration: none;
     display: block;
@@ -487,7 +498,7 @@ dotlottie-player {
   }
   
   /* Change color of dropdown links on hover */
-  .dropdown-content a:hover {background-color: #f1f1f1}
+  .dropdown-content a:hover {background-color: #0051ff}
   
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {
