--- a/css/contri-style.css
+++ b/css/contri-style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Kalam&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 html {
   box-sizing: border-box;
@@ -67,7 +68,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
+  font-family: "Poppins", Arial, sans-serif;
   background-color: #f5f5f5;
 }
 
